
  * fixed issue #3 server hangs when laser not detected
  * fixed issue #12 internet connection is no longer needed, added font-awsome fonts to www
  * scanner does start even if serial or camera connection fails, a message is shown in frontend now
  * fixed mjepeg connection error bug, stack trace is not longer shown in log
  * fixed some bugs in FSCamera.py

 -- Mario Lukas  <info@mariolukas.de>  Thu, 20 Feb 2016 00:18:22 +0000

fabscanpi-server (0.1.12) unstable; urgency=medium

  * switched from depricated python-support to dh_python2 package builder
  * modified makefile to fit the new builder

 -- Mario Lukas  <info@mariolukas.de>  Thu, 10 Feb 2016 23:03:40 +0000

fabscanpi-server (0.1.11) unstable; urgency=medium

  * modified init script
  * added update instructions do documentation

 -- Mario Lukas  <info@mariolukas.de>  Thu, 10 Feb 2016 08:24:40 +0000


fabscanpi-server (0.1.10) unstable; urgency=medium

  * new firmware version

 -- Mario Lukas  <info@mariolukas.de>  Thu, 10 Feb 2016 00:39:10 +0000

fabscanpi-server (0.1.9) unstable; urgency=medium

  * fixed debian package installer scripts

 -- Mario Lukas  <info@mariolukas.de>  Mon, 08 Feb 2016 23:21:19 +0000

fabscanpi-server (0.1.8) unstable; urgency=medium

  * fixed python package path error

 -- Mario Lukas  <info@mariolukas.de>  Mon, 08 Feb 2016 23:21:19 +0000

fabscanpi-server (0.1.7) unstable; urgency=medium

  * fixed versioning in frontend
  * fixed some camera parameters for better color scan results
  * fixed issue #3
  * added auto versioning to setup.py
  * changed ui files

 -- Mario Lukas  <info@mariolukas.de>  Mon, 08 Feb 2016 00:20:13 +0000

fabscanpi-server (0.1.6) unstable; urgency=medium

  * switched to firmware v.20160204 which supports custom boards and fixes some issues
  * added motor enable/disable commands before and after scans to prevent hot motors
  * closed issue #4 added auto flash enable/disable option to config file
