@@ -10,6 +10,6 @@ Package: fabscanpi-server
 Architecture: all
 Homepage: http://fabscan.org
 X-Python-Version: ${python:Versions}
-Depends: ${misc:Depends}, ${python:Depends}, python-opencv-tbb, libtbb2, python-pil, python-serial, python-pykka, python-picamera, avrdude
+Depends: ${misc:Depends}, ${python:Depends}, python-opencv-tbb, libtbb2, python-pil, python-serial, python-pykka, python-picamera, avrdude, v4l-utils
 Description: 
  FabScanPi Server ist the backend of the Stand-alone, Web-enabled, Open Source 3D laser scanner.
